--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr"> 
+<html lang="en"> 
     <!-- change "fr" for "en" to put it in english-->
 <head>
     <meta charset="UTF-8">
@@ -10,10 +10,10 @@
 <body>
 
     <div class="container">
-
+<ing scr = "pics/frame.png" alt = "Test PP">
         <!-- Put your profile picture here -->
 
-        <!-- Put your name here, in Title 1 (h1) -->
+        Alma
 
         <p class="bio">
             <!-- Put a bio -->
