--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en"> 
-    <!-- change "fr" for "en" to put it in english-->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <title>Put your page title</title> -->
+    Alma Linktree
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,16 +11,16 @@
     <div class="container">
 <ing scr = "pics/frame.png" alt = "Test PP">
         <!-- Put your profile picture here -->
-
+<h1> Alma Stebele !! </h1>h1>
         Alma
 
         <p class="bio">
-            <!-- Put a bio -->
+I do code at ScPo
         </p>
 
         <div class="links">
 
-            <!-- <a href= put your GitHub link here target="_blank" class="link-btn"> -->
+           https://github.com/almastebele-lgtm
                 <img src="pics/logos/github.png" alt="GitHub">
                 GitHub
             </a>
